--- a/public/index.html
+++ b/public/index.html
@@ -40,16 +40,19 @@ proferring scalable solutions." />
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    
+
     <title>Ojochogwu Dickson: Frontend Developer</title>
   </head>
   <body>
+   
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"><form name="contact-form" netlify netlify-honeypot="bot-field" hidden>
+    <div id="root">  
+      <form name="contact" netlify netlify-honeypot="bot-field" hidden>
       <input type="text" name="name" />
       <input type="email" name="email" />
-      <textarea name="message"></textarea>
-    </form></div>
+      <textarea name="message" ></textarea>
+  </form>
+</div>
     
     <!--
       This HTML file is a template.
