--- a/public/index.html
+++ b/public/index.html
@@ -46,13 +46,7 @@ proferring scalable solutions." />
   <body>
    
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root">  
-      <form name="contact" netlify netlify-honeypot="bot-field" hidden>
-      <input type="text" name="name" />
-      <input type="email" name="email" />
-      <textarea name="message" ></textarea>
-  </form>
-</div>
+    <div id="root"></div>
     
     <!--
       This HTML file is a template.
